<resources>

    <string name="app_name" translatable="false">Piedfly</string>
    <string name="title_activity_phone" translatable="false">PhoneActivity</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>

    <!--Shared preferences-->
    <string name="pref_uid" translatable="false">uidFirebase</string>
    <string name="pref_tiny_ID" translatable="false">tinyID</string>
    <string name="pref_token" translatable="false">tokenFirebase</string>
    <string name="pref_emergencies_user" translatable="false">emergenciesUser</string>
    <string name="pref_emergencies_flock" translatable="false">emergenciesFlock</string>
    <string name="pref_emergencies_nearby" translatable="false">emergenciesNearby</string>
    <string name="pref_last_hotbeacon" translatable="false">lastHotBeacon</string>
    <string name="pref_power_toggle" translatable="false">powerToggle</string>
    <string name="pref_passive_monitoring" translatable="false">passiveMonitoring</string>
    <string name="pref_phone_not_verified" translatable="false">phoneNotVerified</string>

    <string name="intent_uid" translatable="false">uidIntent</string>

    <!-- Content Strings-->
    <string name="content_request_permission_title">Permissions Needed</string>
    <string name="content_request_permission_message">This App requires you to allow it to read and write the system settings.</string>
    <string name="content_notification_title">You Are Protected</string>
    <string name="content_notification_text">If in danger, press the power button repeatedly</string>
    <string name="content_join_flock_request">A request to join your Flock has been sent to</string>
    <string name="content_join_flock_already">is already part of your flock.</string>
    <string name="content_yes">Yes</string>
    <string name="content_no">No</string>
    <string name="content_undo_caps">UNDO</string>
    <string name="content_removed">Removed</string>
    <string name="content_upload_error">Image upload unsuccessful, please try again.</string>
    <string name="content_slide_for_alarm">Slide for Alarm</string>
    <string name="content_delete_caps">DELETE</string>
    <string name="content_last_seen_place">Last seen at</string>
    <string name="content_only_local_user_warning">This user only exists locally.</string>
    <string name="content_push_emergency_user_title">You have triggered an mEmergency!</string>
    <string name="content_push_emergency_user_text">Your Flock has been notified. Help is on the way.</string>
    <string name="content_push_emergency_flock_title">is in danger!</string>
    <string name="content_push_emergency_flock_text">Click on this notification to help in the intervention.</string>
    <string name="content_push_emergency_nearby_title">Someone nearby is in danger!</string>
    <string name="content_push_emergency_nearby_text">Click on this notification to help in the intervention.</string>
    <string name="content_push_emergency_finish_title">is no longer in danger.</string>
    <string name="content_push_emergency_finish_text">Thanks for your help!</string>
    <string name="content_push_request_title">wants to join your Flock.</string>
    <string name="content_push_request_text">Keep each other safe by accepting the request.</string>
    <string name="content_push_poke_start_title">wants to know if you\'re alright.</string>
    <string name="content_push_poke_start_text">Indicate that you\'re fine by clicking on this notification.</string>
    <string name="content_push_poke_end_title">seems to be fine.</string>
    <string name="content_push_poke_end_text">No need to worry!</string>
    <string name="content_poke_none">A poke has been sent and we\'re waiting for an answer.</string>
    <string name="content_poke_flock">¡You\'re fine! No need to worry.</string>
    <string name="content_poke_user">You have cancelled the poke.</string>
    <string name="content_dialog_flock">Do you want to add this User to your Flock?</string>
    <string name="content_no_phone">This user has no verified phone number.</string>
    <string name="content_no_location">Couldn\'t retrieve this user\'s location.</string>
    <string name="content_action_settings">Settings</string>
    <string name="content_permission_location_cancelled">We need your location for the map to work.</string>
    <string name="content_map_activity_label">Map</string>
    <string name="content_slide_to_cancel">Slide to Cancel</string>

    <!-- Accessibility, this should also be translated -->
    <string name="content_description_contact_directions">Find where this contact is.</string>
    <string name="content_description_contact_call">Call this contact.</string>
    <string name="content_description_contact_poke">Poke this contact.</string>
    <string name="content_description_swipe_delete_contact">Swipe left to delete this contact.</string>
    <string name="content_description_swipe_delete_message">Swipe left to delete this message.</string>
    <string name="content_description_message_icon">Message icon.</string>

</resources>
