<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/item_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent">

        <ImageView
            android:id="@+id/delete_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/default_margin"
            android:contentDescription="@string/content_description_swipe_delete_contact"
            android:src="@drawable/ic_delete_white_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_toStartOf="@id/delete_icon"
            android:text="@string/content_delete_caps"
            android:textColor="@color/full_white"
            android:textSize="14sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/item_foreground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/default_background_color">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/contact_image"
            android:layout_width="@dimen/map_user_image"
            android:layout_height="@dimen/map_user_image"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_small_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/default_flock" />

        <TextView
            android:id="@+id/contact_name"
            android:layout_width="@dimen/contact_name_width"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:lines="1"
            android:textColor="@color/primary_text"
            android:textSize="14sp"
            tools:text="Random-Random Random (Random)" />

        <ImageView
            android:id="@+id/contact_directions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/default_small_margin"
            android:layout_toStartOf="@+id/contact_call"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_contact_directions"
            android:padding="@dimen/touchable_icon_padding"
            android:src="@drawable/ic_gps_fixed_24dp"
            android:tint="@color/colorSecondaryAccent" />

        <ImageView
            android:id="@+id/contact_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/default_margin"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_contact_call"
            android:padding="@dimen/touchable_icon_padding"
            android:src="@drawable/ic_call_24dp"
            android:tint="@color/colorSecondaryAccent" />

        <ImageView
            android:id="@+id/contact_poke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/default_margin"
            android:contentDescription="@string/content_description_contact_poke"
            android:padding="@dimen/touchable_icon_padding"
            android:src="@drawable/ic_poke_empty"
            android:tint="@color/colorSecondaryAccent" />

    </RelativeLayout>

</FrameLayout>


